<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DHDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="daheng_mobile">大恒旱情移动管理平台</string>
    
    <string name="default_value">---</string>
    <string name="default_time">2014-9-18 23:23</string>
    <string name="realtime_data">实时数据</string>
    <string name="site_id">站点ID: </string>
    <string name="site_name">站点名称: </string>
    <string name="site_address">站点地址: </string>
    <string name="detection_time">采集时间: </string>
    <string name="volumetric_water_content">体积含水量: </string>
    <string name="weight_water_content">重量含水量: </string>
    <string name="lon_lat">经度纬度: </string>
    <string name="soils_type">土壤类型: </string>
    <string name="measure_depth">测量深度: </string>
    
    <string name="data_detection_query">数据采集与查询</string>
    <string name="paraments_setting">参数设置</string>
    <string name="phone_book">联系人目录</string>
    <string name="sensor_function">传感器方程式</string>
    <string name="communication_paraments">通讯参数</string>
    <string name="system_paraments">系统参数</string>
    <string name="more">更多</string>
    
    <string name="detection_send_real_data">采集与发送实时数据</string>
    <string name="detection_send_history_data">采集与发送历史数据</string>
    <string name="detection_send_site_image">采集与发送现场图片</string>
    
    <string name="modify">修改</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="send_center">数据发送</string>
    
    <string name="switch_gps_mode">切换GPS获取模式</string>
    <string name="enable_password">密码设置</string>
    <string name="enable_password_key">enable_password_key</string>
    
    <string name="soil_type_default_value">1</string>
    <string name="soil_type_key">soil_type_key</string>
    <string name="device_id_key">device_id_key</string>
    
    <string name="sensor_depth_key">sensor_depth_key</string>
    <string name="soils_bulk_key">soils_bulk_key</string>
    <string name="field_water_key">field_water_key</string>
    
    <string name="lon_key">lon_key</string>
    <string name="lat_key">lat_key</string>
    
    <string name="A_key">A_key</string>
    <string name="B_key">B_key</string>
    <string name="C_key">C_key</string>
    <string name="D_key">D_key</string>
    
    <string name="redefault">恢复出厂设置</string>
    
    <string name="center_site">中心站</string>
    <string name="add_center_site">添加中心站</string>
    <string name="ip">IP地址: </string>
    <string name="port">端口: </string>
    <string name="sms">短信号码: </string>
    
    <string name="action_next">跳过</string>
    <string name="manage_passcode">Manage passcode</string>
    <string name="setup_passcode">Setup Passcode</string>
    <string name="enter_passcode">输入密码</string>
    <string name="enter_old_passcode">输入旧密码</string>
    <string name="reenter_passcode">重新输入密码</string>
    <string name="change_passcode">修改密码</string>
    <string name="passcode_wrong">密码错误, 请重新输入.</string>
    <string name="disable_passcode">关闭密码</string>
    <string name="enable_passcode">打开密码</string>
    
	<string name="tab_home">实时数据</string>
	<string name="tab_history">历史数据</string>
	<string name="tab_book">联系人</string>
	<string name="tab_settings">设置</string>
    
    <string name="developing_text">功能正在开发，敬请期待！</string>

</resources>
